# QuantumProteinOS

./: CLAIMS.md  README.md  pyproject.toml  requirements.txt  scratch_find_slashes.py  test.py
.github/workflows/: benchmarks.yml  ci.yml  full-benchmark.yml
benchmarks/: run_all.py
benchmarks/autoinhibited/: download_af_fixtures.py  run.py
benchmarks/autoinhibited/results/: stats.json
benchmarks/chirality/: run.py
benchmarks/chirality/results/: audit_summary.json
benchmarks/disorder/: run.py
benchmarks/disorder/results/: metrics.json
benchmarks/rotamer_packing/: run.py
configs/: default.yaml
qpos/: __init__.py  pipeline.py
qpos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
qpos/chirality/: __init__.py  af3_corrector.py  auditor.py  boltz_augmentation.py  mirror.py  validator.py
qpos/conformational/: __init__.py  fold_switch_qubo.py  nma_sampler.py  qicess_scorer.py
qpos/data/: __init__.py  benchmark_datasets.py  pdb_fetcher.py  pdb_parser.py
qpos/disorder/: __init__.py  colab_gpu.py  disprot_loader.py  ensemble.py  esm_embeddings.py  features.py
qpos/quantum/: __init__.py  iws_qaoa.py  ogp_router.py  qadf_rubric.py  qubo_builder.py  vqc.py  xy_mixer.py  zne.py
qpos/rotamers/: __init__.py  packer.py
results/ci_smoke_test/: chirality_report.json  disorder_scores.csv  qadf_score.json  summary.txt
scripts/: generate_ci_report.py  run_full_pipeline.py
tests/: test_pipeline.py
tests/fixtures/: pdb2ozo.ent
