[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qpos"
version = "0.1.0"
description = "Unified quantum-classical protein structure prediction framework"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Tommaso R. Marena", email = "marena@cua.edu"}
]
dependencies = [
    "pennylane>=0.38",
    "biopython>=1.83",
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "torch>=2.2",
    "pandas>=2.2",
    "networkx>=3.2",
    "scikit-learn>=1.4",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "requests>=2.31",
    "tqdm>=4.66",
]

[project.optional-dependencies]
boltz = ["boltz>=0.4.0", "pytorch-lightning>=2.2.0"]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "pytest-mock>=3.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["qpos*"]
exclude = ["configs*", "benchmarks*", "scripts*", "tests*"]
